<resources>
    <string name="app_name">Car Park Apps</string>
    <string name="imagelogo"></string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="logotext">Hello, Welcome To Car Park</string>
    <string name="signupbutton">"Sign Up "</string>
    <string name="forget_password">Forget Password?</string>
    <string name="btnlogin">Login</string>
    <string name="block_login">Login</string>
    <string name="blocksign_up">Sign Up</string>
    <string name="textLogo">Welcome Back, Easy Car Park</string>
    <string name="name">Enter Name</string>
    <string name="phonenumber">Enter Phone Number</string>
    <string name="enterconfirmpassword">Enter Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="imageIcon">imageIcon</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="textviewChangePassword">Change Password</string>
    <string name="editTxtCurrentPassword" />
    <string name="editTxtNewPassword" />
    <string name="editTextConfirmPassword" />
    <string name="btnUpdate">Update</string>
    <string name="btnCancel">CANCEL</string>
    <string name="txtViewEmail">Email</string>
    <string name="txtVirwName">Name</string>
    <string name="txtViewPhoneNumber">Phone Number</string>
    <string name="txtViewGender">Gender</string>
    <string name="imageProfile">Profile</string>
    <string name="btnSave">Save</string>
    <string name="ediTextGender">Gender</string>
    <string name="paymentdetails">Payment Details</string>
    <string name="nameofcard">Name Of Card</string>
    <string name="editNameOFCard" />
    <string name="cardnumber">Card Number</string>
    <string name="textExpirationDate">Expiration Date</string>
    <string name="btnCheckOut">Check Out</string>
    <string name="securitycode">Security Code</string>
    <string name="CVC">CVC</string>
    <string name="creditcard">Credit Card</string>
    <string name="paypal">Pay Pal</string>
    <string name="enterNameOfCard">Enter Name Of Card</string>
    <string name="enterNumberOfCard">Enter Number Of Card </string>
    <string name="txtDate">Date</string>
    <string name="txtViewTime">Time</string>
    <string name="txtViewDuration">Duration</string>
    <string name="btnSearch">Search</string>
    <string name="dateReservation" />
    <string name="vehiclePlateNumber">Vehicle Plate Number</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="description">Description</string>
    <string name="empty"></string>
    <string name="vehicleDescription" />
    <string name="exampleVehicle">Eg: PSS 1234</string>
    <string name="vechicleplatenumber" />
    <string name="forgetEmail">Enter Email</string>
    <string name="resetBtn">Reset Password</string>
    <string name="username" />
    <string name="txtPersonName">Name</string>
    <string name="txtPhoneNumber" />
    <string name="txtVehicleNo">Plate Number</string>

    <string name="home">Home</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_make_reservation">MakeReservation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pickATIme">Pick A Time</string>
    <string name="pickADate">Pick A Date</string>
    <string name="pickADuration"></string>
    <string name="pickSlotTitle">Pick Your Slot</string>
    <string name="btnConfirmSlots">Confirm Slot</string>
    <string name="firstHourRate">First Hour</string>
    <string name="thirdHourRate">3 Hours - 5 Hours</string>
    <string name="maxHourRate">Maximum A Day</string>
    <string name="nodata">No data</string>
    <string name="selectDuration">Select Duration</string>

    <string name="s1">S1</string>
    <string name="s2">S2</string>
    <string name="s3">S3</string>
    <string name="s4">S4</string>
    <string name="s5">S5</string>
    <string name="s6">S6</string>
    <string name="s7">S7</string>
    <string name="s8">S8</string>
    <string name="d1">D1</string>
    <string name="d2">D2</string>
    <string name="d3">D3</string>
    <string name="carplatetxt">Car Plate</string>
    <string name="editCarPlate">Car Plate</string>
    <!--    <string name="s1">S1</string>-->
    <!--    <string name="s1">S1</string>-->
    <!--    <string name="s1">S1</string>-->


</resources>