<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetPassword">

    <EditText
        android:id="@+id/forgetEmail"
        android:layout_width="309dp"
        android:layout_height="69dp"
        android:layout_marginTop="56dp"
        android:autofillHints="@string/empty"
        android:ems="10"
        android:hint="@string/forgetEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetview" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="235dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:text="@string/resetBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetEmail" />

    <ImageView
        android:id="@+id/forgetview"
        android:layout_width="172dp"
        android:layout_height="168dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forgetpassword" />
</androidx.constraintlayout.widget.ConstraintLayout>