<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarParkSlot">


    <TextView
        android:id="@+id/aboutUs"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="76dp"
        android:layout_weight="0.02"
        android:fontFamily="sans-serif"
        android:gravity="bottom"
        android:paddingBottom="20dp"
        android:text="@string/pickSlotTitle"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:layout_marginTop="4dp"
        android:layout_weight="0.35"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUs">

        <Button
            android:id="@+id/btn1"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/available"
            android:text="@string/s1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/btn1"
            android:background="@drawable/available"
            android:text="@string/s2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/btn2"
            android:background="@drawable/available"
            android:text="@string/s3" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="52dp"
            android:layout_toEndOf="@+id/btn3"
            android:background="@drawable/available"
            android:text="@string/s4" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/available"
            android:text="@string/s5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn2"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/btn5"
            android:background="@drawable/available"
            android:text="@string/s6" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn2"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/btn6"
            android:background="@drawable/available"
            android:text="@string/s7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn2"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="52dp"
            android:layout_toEndOf="@+id/btn7"
            android:background="@drawable/available"
            android:text="@string/s8" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginTop="4dp"
        android:layout_weight="0.68"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">


        <Button
            android:id="@+id/btnD1"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/selected"
            android:text="@string/d1" />

        <Button
            android:id="@+id/btnD2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/btnD1"
            android:background="@drawable/available"
            android:text="@string/d2" />

        <Button
            android:id="@+id/btnD3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="58dp"
            android:layout_marginRight="58dp"
            android:layout_toEndOf="@+id/btnD2"
            android:background="@drawable/booked"
            android:text="@string/d3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnD3"
            android:layout_alignEnd="@+id/btnD3"
            android:layout_alignRight="@+id/btnD3"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:text="Booked"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnD2"
            android:layout_alignStart="@+id/btnD2"
            android:layout_alignLeft="@+id/btnD2"
            android:text="Available"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnD1"
            android:layout_alignStart="@+id/btnD1"
            android:layout_alignLeft="@+id/btnD1"
            android:text="Selected"
            android:textStyle="bold" />


    </RelativeLayout>

    <Button
        android:id="@+id/btnConfirmSeats"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.02"

        android:background="@drawable/button_background"
        android:text="@string/btnConfirmSlots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>